[gd_scene load_steps=6 format=3 uid="uid://0nn2ppj7mj7o"]

[ext_resource type="Texture2D" uid="uid://bwaqlxiyukdnf" path="res://assets/textures/d4.png" id="1_5pe7h"]
[ext_resource type="FontFile" uid="uid://b5b4h4wmxrrqb" path="res://assets/fonts/Oswald-VariableFont_wght.ttf" id="1_8cp8x"]
[ext_resource type="Script" uid="uid://cq60wnvd4gw3o" path="res://scenes/ui_objects/skill_selection_dialog/skill_row.gd" id="1_qt5f6"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qbjek"]
bg_color = Color(0.41568628, 0.24705882, 0.050980393, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_qt5f6"]

[node name="SkillRow" type="PanelContainer"]
custom_minimum_size = Vector2(500, 0)
theme_override_styles/panel = SubResource("StyleBoxFlat_qbjek")
script = ExtResource("1_qt5f6")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
theme_override_constants/separation = 0

[node name="DieContainer" type="CenterContainer" parent="HBoxContainer"]
custom_minimum_size = Vector2(65, 65)
layout_mode = 2

[node name="DieImage" type="TextureRect" parent="HBoxContainer/DieContainer"]
unique_name_in_owner = true
self_modulate = Color(0.8235294, 0.6313726, 0.32156864, 1)
custom_minimum_size = Vector2(55, 55)
layout_mode = 2
texture = ExtResource("1_5pe7h")
expand_mode = 1

[node name="DieText" type="Label" parent="HBoxContainer/DieContainer/DieImage"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_fonts/font = ExtResource("1_8cp8x")
theme_override_font_sizes/font_size = 30
text = "d4"
horizontal_alignment = 1

[node name="BonusLabel" type="Label" parent="HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_fonts/font = ExtResource("1_8cp8x")
theme_override_font_sizes/font_size = 30
text = "+ 0"
horizontal_alignment = 1

[node name="SkillLabel" type="Label" parent="HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_fonts/font = ExtResource("1_8cp8x")
theme_override_font_sizes/font_size = 30
text = "Constitution"

[node name="DcContainer" type="MarginContainer" parent="HBoxContainer"]
layout_mode = 2
theme_override_constants/margin_right = 10

[node name="DcLabel" type="Label" parent="HBoxContainer/DcContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_fonts/font = ExtResource("1_8cp8x")
theme_override_font_sizes/font_size = 30
text = "10"
horizontal_alignment = 2

[node name="SkillRowOverlayButton" type="Button" parent="."]
unique_name_in_owner = true
layout_mode = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_qt5f6")
flat = true
