extends PanelContainer

@onready var die_image: TextureRect = %DieImage
@onready var die_text: Label = %DieText
@onready var bonus_label: Label = %BonusLabel
@onready var skill_label: Label = %SkillLabel
@onready var dc_label: Label = %DcLabel
@onready var skill_row_overlay_button: Button = %SkillRowOverlayButton
